@@ -840,6 +840,8 @@ function advise_display_popup_group_select() {
       
   advise_init_screen();
   fp_add_js(fp_get_module_path("advise") . "/js/advise.js");
+  fp_add_css(fp_get_module_path("advise") . "/css/advise.css");
+  
   
   $settings = fp_get_system_settings();
   
